--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@300;400&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.min.css">
@@ -19,18 +18,25 @@
 
 <body>
     <div class="modal">
-        <a class="modal__close-area">wefwef</a>
+        <a class="modal__close-area"></a>
         <div class="modal__menu">
             <h3 class="modal__title global__title">menu</h3>
             <nav class="modal__nav modal-nav">
                 <ul class="modal-nav__list global-nav__list">
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#home">Home</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#service">Service</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#about-us">About us</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#price">Pricing Table</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#how-work">How it work</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#feedback">Happy Clients</a></li>
-                    <li class="nav__item"><a class="nav__link global__subtitle" href="#newsletter">Contact Us</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle" href="#home">Home</a>
+                    </li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle"
+                            href="#service">Service</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle" href="#about-us">About
+                            us</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle" href="#price">Pricing
+                            Table</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle" href="#how-work">How it
+                            work</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle" href="#feedback">Happy
+                            Clients</a></li>
+                    <li class="modal-nav__item nav__item"><a class="nav__link global__subtitle"
+                            href="#newsletter">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,7 +61,7 @@
         </div>
     </header>
     <main>
-        <section class="banner " id="home">
+        <section class="banner" id="home">
             <div class="banner__wrapper wrapper">
                 <h1 class="banner__title wow fadeInDown">Boost up your Local business</h1>
                 <p class="banner__subtitle wow fadeInDown" data-wow-delay="0.2s">Lorem Ipsum is simply dummy text of the
@@ -120,7 +126,7 @@
                 <div class="service__items">
                     <div class="service__item service-item wow fadeInLeft" data-wow-delay="0.3s">
                         <!-- <i class="fa fa-clock-o service-item__icon" aria-hidden="true"></i> -->
-                        <i class="fa fa-camera-retro service-item__icon aria-hidden=" true""></i>
+                        <i class="far fa-clock service-item__icon" aria-hidden="true"></i>
                         <h3 class="service-item__title">Font-Awesome Icons</h3>
                         <p class="service-item__text global__text global__text--dark">Lorem Ipsum is simply dummy text
                             of
@@ -142,7 +148,7 @@
                             cover many web sites still in their infancy</p>
                     </div>
                     <div class="service__item service-item wow fadeInLeft" data-wow-delay="0.5s">
-                        <i class="fa fa-hand-spock-o service-item__icon" aria-hidden="true"></i>
+                        <i class="fas fa-globe-africa service-item__icon" aria-hidden="true"></i>
                         <h3 class="service-item__title">Friendly Code</h3>
                         <p class="service-item__text global__text global__text--dark">Finibus Bonorum et Malorum" by
                             Cicero
@@ -152,7 +158,7 @@
                         </p>
                     </div>
                     <div class="service__item service-item wow fadeInRight" data-wow-delay="0.5s">
-                        <i class="fa fa-cog service-item__icon" aria-hidden="true"></i>
+                        <i class="fas fa-cog service-item__icon" aria-hidden="true"></i>
                         <h3 class="service-item__title">Fully Responsive Design</h3>
                         <p class="service-item__text global__text global__text--dark">Many desktop publishing packages
                             and
@@ -238,7 +244,7 @@
                         <div class="price-card__descr-item">1 Account</div>
                         <div class="price-card__descr-item">8 hour support</div>
                         <div class="price-card__descr-item">Custom Cloud Services</div>
-                        <a class="price-card__btn global__btn">Get Started</a>
+                        <a href="#newsletter" class="price-card__btn global__btn">Get Started</a>
                     </div>
                     <div class="price__card price-card active  wow fadeInUp" data-wow-delay="0.5s">
                         <div class="price-card__title">Premium plan</div>
@@ -247,7 +253,7 @@
                         <div class="price-card__descr-item">2 Account</div>
                         <div class="price-card__descr-item">100MB Storage</div>
                         <div class="price-card__descr-item">Custom Cloud Services</div>
-                        <a class="price-card__btn global__btn">Get Started</a>
+                        <a href="#newsletter" class="price-card__btn global__btn">Get Started</a>
                     </div>
                     <div class="price__card price-card wow fadeInUp" data-wow-delay="0.7s">
                         <div class="price-card__title">Gold plan</div>
@@ -256,7 +262,7 @@
                         <div class="price-card__descr-item">8 Account</div>
                         <div class="price-card__descr-item">24 hour support</div>
                         <div class="price-card__descr-item">Custom Cloud Services</div>
-                        <a class="price-card__btn global__btn">Get Started</a>
+                        <a href="#newsletter" class="price-card__btn global__btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -420,34 +426,36 @@
             </div>
         </section>
         <section class="footer-nav">
-            <ul class="footer-nav__list">
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#home">Home</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#service">Service</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#about-us">About us</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#price">Pricing Table</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#how-work">How it work</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#feedback">Happy Clients</a></li>
-                <li class="footer-nav__item"><a class="footer-nav__link" href="#newsletter">Contact Us</a></li>
-            </ul>
-            <a class="footer-nav__phone-number" href="tel:+9879976999"><i class="fa fa-phone"></i> +987 9976 999</a>
-            <ul class="footer-nav___social-list">
-                <li class="footer-nav___social-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li class="footer-nav___social-item"><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                <li class="footer-nav___social-item"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li class="footer-nav___social-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+            <div class="wrapper">
+                <ul class="footer-nav__list">
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#home">Home</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#service">Service</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#about-us">About us</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#price">Pricing Table</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#how-work">How it work</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#feedback">Happy Clients</a></li>
+                    <li class="footer-nav__item"><a class="footer-nav__link" href="#newsletter">Contact Us</a></li>
+                </ul>
+                <a class="footer-nav__phone-number" href="tel:+9879976999"><i class="fa fa-phone"></i> +987 9976 999</a>
+                <ul class="footer-nav___social-list">
+                    <li class="footer-nav___social-item"><a><i class="fab fa-twitter"></i></a></li>
+                    <li class="footer-nav___social-item"><a><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="footer-nav___social-item"><a><i class="fab fa-google-plus-g"></i></a></li>
+                    <li class="footer-nav___social-item"><a><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <h2 class="footer__copyright">All contents © copyright 2023 Business Theme. All rights reserved Designed by
-            :
-            akhilwebfolio</h2>
+        <div class="wrapper">
+            <h2 class="footer__copyright">All contents © copyright 2023 Business Theme. All rights reserved Designed by
+                :
+                akhilwebfolio</h2>
+        </div>
     </footer>
 </body>
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
 
-<!-- <script src="js/itc-slider.js"></script> -->
 <script src="js/main.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanillajs-scrollspy@3.0.3/dist/vanillajs-scrollspy.min.js"></script>
 
